--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <textarea onkeyup="checkTextarea();" name="" id="txtZin" cols="30" rows="10"></textarea>
     <br>
-    <span>Aaantal letters:</span>
+    <span>Aantal letters:</span>
     <span id="letters"></span>
     <br>
     <span>Aantal woorden:</span>
@@ -18,7 +18,7 @@
     <span>Laatse woord:</span>
     <span id="laatste"></span>
     <br>
-    <span>'Syntra komt voor':</span>
+    <span>'Syntra' komt voor:</span>
     <span id="syntra"></span>
     <br>
     <button onclick="uppercase();">Uppercase</button>
